--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -18,14 +18,20 @@
 
 <resources>
 
-    // ╔═══════════════════════════════════════════════════════════════════════════════════════════╗
-    // ║ GENERIC STRINGS ║
-    // ╚═══════════════════════════════════════════════════════════════════════════════════════════╝
-
+    <!-- Generic -->
     <string name="app_name">EUDI Wallet</string>
     <string name="generic_error_message">Oups! Something went wrong</string>
     <string name="generic_error_description">If the issue persists, please contact customer support</string>
     <string name="generic_network_error_message">You are not connected to the internet</string>
     <string name="generic_error_retry">Please try again</string>
+    <string name="generic_cancel">Cancel</string>
+
+    <!-- Biometric prompt -->
+    <string name="biometric_prompt_title">Biometric login</string>
+    <string name="biometric_prompt_subtitle">Log in using your biometric credential</string>
+
+    <!-- Biometrics -->
+    <string name="biometric_no_hardware">Your device does not support biometric authentication</string>
+    <string name="biometric_unknown_error">Something went wrong initializing biometric authentication. Please try again</string>
 
 </resources>
