--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -26,6 +26,11 @@
     <string name="generic_error_retry">Please try again</string>
     <string name="generic_cancel">Cancel</string>
 
+    <!-- Content Description -->
+    <string name="content_description_more_vert_icon">More Items Vertically</string>
+    <string name="content_description_arrow_back_icon">Go Back</string>
+    <string name="content_description_close_icon">Close</string>
+
     <!-- Biometric prompt -->
     <string name="biometric_prompt_title">Biometric login</string>
     <string name="biometric_prompt_subtitle">Log in using your biometric credential</string>
