Working on EUDIW-1191, Corrections for Testing modules, added form validator and tests

--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -43,4 +43,7 @@
     <!-- Success Screen -->
     <string name="content_description_success_screen_icon">Success icon</string>
 
+    <!-- Quick Pin -->
+    <string name="quick_pin_invalid_error">Invalid quick pin</string>
+
 </resources>
