New feature authentication module, reworked the top spacing a little bit for content screen if toolbar is not available, corrections and changes for Authentication flow, added biometry step.

--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="app_name">EUDI Wallet</string>
     <string name="generic_error_message">Oups! Something went wrong</string>
     <string name="generic_error_description">If the issue persists, please contact customer support</string>
-    <string name="generic_error_button_retry">Try again</string>
+    <string name="generic_error_button_retry">TRY AGAIN</string>
     <string name="generic_network_error_message">You are not connected to the internet</string>
     <string name="generic_error_retry">Please try again</string>
     <string name="generic_cancel">Cancel</string>
@@ -37,8 +37,8 @@
     <string name="content_description_touch_id_icon">Touch id icon</string>
 
     <!-- Biometric prompt -->
-    <string name="biometric_prompt_title">Biometric login</string>
-    <string name="biometric_prompt_subtitle">Log in using your biometric credential</string>
+    <string name="biometric_prompt_title">Biometric authentication</string>
+    <string name="biometric_prompt_subtitle">Authenticate using your biometrics</string>
 
     <!-- Biometrics -->
     <string name="biometric_no_hardware">Your device does not support biometric authentication</string>
@@ -50,7 +50,7 @@
     <!-- Quick Pin -->
     <string name="quick_pin_invalid_error">Invalid quick pin</string>
 
-    <!-- Online Authentication UserData Screen -->
+    <!-- Authentication UserData Screen -->
     <string name="online_authentication_userData_title">Relying party requests the following info</string>
     <string name="online_authentication_userData_subtitle">Please review carefully before sharing your data</string>
     <string name="online_authentication_userData_id_number">ID number</string>
@@ -63,11 +63,13 @@
     <string name="online_authentication_userData_bottom_sheet_primary_button_text">CONTINUE SHARING</string>
     <string name="online_authentication_userData_bottom_sheet_secondary_button_text" tools:ignore="ButtonCase">CANCEL</string>
 
-    <!-- Online Authentication Loading Screen -->
+    <!-- Authentication Loading Screen -->
     <string name="online_authentication_loading_title">Relying party requests the following info</string>
     <string name="online_authentication_loading_subtitle">Sharing your data…</string>
     <string name="online_authentication_success_config_title">@string/generic_success</string>
     <string name="online_authentication_success_config_subtitle">You successfully shared information with the Relying party</string>
     <string name="online_authentication_success_config_primary_button_text">@string/generic_ok</string>
+    <string name="online_authentication_biometry_share_subtitle">use your biometrics to share information</string>
+    <string name="online_authentication_quick_pin_share_subtitle">type your quick pin to share information</string>
 
 </resources>
