--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -45,6 +45,8 @@
     <string name="content_description_arrow_down_icon">Arrow down</string>
     <string name="content_description_visibility_icon">Show</string>
     <string name="content_description_visibility_off_icon">Hide</string>
+    <string name="content_description_user_profile_placeholder">User profile placeholder</string>
+
 
     <!-- Biometric prompt -->
     <string name="biometric_prompt_title">Biometric authentication</string>
@@ -88,4 +90,8 @@
     <!-- Login -->
     <string name="welcome_login_button_title">LOGIN</string>
     <string name="welcome_faq_button_title">READ FAQs</string>
+
+    <!-- Dashboard -->
+    <string name="dashboard_button_add_doc">ADD DOC</string>
+    <string name="dashboard_button_show_qr_tap">SHOW QR / TAP</string>
 </resources>
