--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="content_description_visibility_icon">Show</string>
     <string name="content_description_visibility_off_icon">Hide</string>
     <string name="content_description_user_profile_placeholder">User profile placeholder</string>
+    <string name="content_description_add_document_placeholder">Add document placeholder</string>
 
 
     <!-- Biometric prompt -->
