[EUDIW-1193] Dashboard Screen - review corrections.

--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -45,9 +45,7 @@
     <string name="content_description_arrow_down_icon">Arrow down</string>
     <string name="content_description_visibility_icon">Show</string>
     <string name="content_description_visibility_off_icon">Hide</string>
-    <string name="content_description_user_profile_placeholder">User profile placeholder</string>
-    <string name="content_description_add_document_placeholder">Add document placeholder</string>
-
+    <string name="content_description_add_icon">Add</string>
 
     <!-- Biometric prompt -->
     <string name="biometric_prompt_title">Biometric authentication</string>
@@ -93,8 +91,8 @@
     <string name="welcome_faq_button_title">READ FAQs</string>
 
     <!-- Dashboard -->
-    <string name="dashboard_button_add_doc">ADD DOC</string>
-    <string name="dashboard_button_show_qr_tap">SHOW QR / TAP</string>
-    <string name="dashboard_document_status_is_active">Active</string>
+    <string name="dashboard_title">Welcome back</string>
+    <string name="dashboard_primary_fab_text">SHOW QR / TAP</string>
+    <string name="dashboard_secondary_fab_text">ADD DOC</string>
 
 </resources>
