--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -62,14 +62,14 @@
     <string name="quick_pin_invalid_error">Invalid quick pin</string>
 
     <!-- Request Screen -->
-    <string name="request_title">EUDI Conference requests the following</string>
+    <string name="request_title">EUDI Conference requests the following to register</string>
     <string name="request_subtitle_one">Please review carefully before sharing your data.</string>
     <string name="request_subtitle_two"> Why we need your data?</string>
     <string name="request_warning_text">Your selection of data to be shared may impact the service</string>
     <string name="request_primary_button_text">SHARE</string>
     <string name="request_secondary_button_text" tools:ignore="ButtonCase">CANCEL</string>
     <string name="request_bottom_sheet_cancel_title">Cancel information sharing?</string>
-    <string name="request_bottom_sheet_cancel_subtitle">Cancel will redirect you back to the dashboard without sharing any information</string>
+    <string name="request_bottom_sheet_cancel_subtitle">Cancel will redirect you back to the login without sharing any information</string>
     <string name="request_bottom_sheet_cancel_primary_button_text">CONTINUE SHARING</string>
     <string name="request_bottom_sheet_cancel_secondary_button_text" tools:ignore="ButtonCase">CANCEL</string>
     <string name="request_bottom_sheet_subtitle_title">Why we need your data</string>
@@ -77,10 +77,10 @@
     <string name="request_bottom_sheet_subtitle_primary_button_text">@string/generic_ok</string>
 
     <!-- Presentation Loading Screen -->
-    <string name="presentation_loading_title">Relying party requests the following</string>
+    <string name="presentation_loading_title">EUDI Conference requests the following to register</string>
     <string name="presentation_loading_subtitle">Please wait…</string>
     <string name="presentation_success_config_title">@string/generic_success</string>
-    <string name="presentation_success_config_subtitle">You successfully shared information with the Relying party</string>
+    <string name="presentation_success_config_subtitle">You successfully shared information with the EUDI Conference</string>
     <string name="presentation_success_config_primary_button_text">@string/generic_ok</string>
     <string name="presentation_biometry_share_subtitle">Use your biometrics to share information</string>
     <string name="presentation_quick_pin_share_subtitle">Type your quick pin to share information</string>
