[EUDIW-1298] QR Code WIP

--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="generic_ok">OK</string>
 
     <!-- Content Description -->
+    <string name="content_description_qr_code">QR Code</string>
     <string name="content_description_more_vert_icon">More Items Vertically</string>
     <string name="content_description_arrow_back_icon">Go Back</string>
     <string name="content_description_close_icon">Close</string>
@@ -93,5 +94,10 @@
     <string name="dashboard_title">Welcome back</string>
     <string name="dashboard_primary_fab_text">SHOW QR / TAP</string>
     <string name="dashboard_secondary_fab_text">ADD DOC</string>
+
+    <!-- QR -->
+    <string name="qr_title">Show QR or Tap</string>
+    <string name="qr_subtitle">Show this QR code to access the necessary information for sharing</string>
+    <string name="qr_use_nfc">Or use the NFC</string>
 
 </resources>
