--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -103,7 +103,8 @@
 
     <!-- Proximity Loading Screen -->
     <string name="proximity_loading_title">The Police officer requests the following</string>
-    <string name="proximity_loading_success_config_subtitle">You successfully shared information with the Police officer</string>
+    <string name="proximity_loading_success_config_subtitle">You successfully shared information with %1$s</string>
+    <string name="proximity_loading_success_config_verifier">Verifier</string>
 
     <!-- Issuance Add Document Screen -->
     <string name="issuance_add_document">CONTINUE</string>
